# history-bot

./: .env.example  .gitignore  LICENSE  README.md  app.py  chat.py  config.py  ingest.py  pyproject.toml
openspec/changes/archive/2026-03-26-ingestion-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-ingestion-pipeline/specs/document-ingestion/: spec.md
openspec/changes/archive/2026-03-26-phase-2-rag-chain/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-phase-2-rag-chain/specs/rag-chain/: spec.md
openspec/changes/phase-3-streamlit-chat-ui/: design.md  proposal.md  tasks.md
openspec/changes/phase-3-streamlit-chat-ui/specs/streamlit-chat-ui/: spec.md
openspec/changes/phase-4-admin-panel/: design.md  proposal.md  tasks.md
openspec/changes/phase-4-admin-panel/specs/admin-panel/: spec.md
openspec/specs/document-ingestion/: spec.md
openspec/specs/rag-chain/: spec.md
pages/: 2_Admin.py
sources/: test_history.txt
