[project]
name = "history-bot"
version = "0.1.0"
description = "Local RAG bot specialised on history documents"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-chroma>=0.1",
    "chromadb>=0.5",
    "pydantic-settings>=2.0",
    "ollama>=0.3",
    "langchain-ollama>=0.3",
    "beautifulsoup4>=4.12",
]

[tool.uv]
package = false
